# AskGPTCli

./: Cargo.toml  README.md
src/: gpt.rs  main.rs
