[package]
name = "Ask"
version = "0.1.0"
edition = "2021"



[dependencies]
bytes = "1.4.0"
cargo-whatfeatures = "0.9.9"
features = "0.10.0"
futures-util = "0.3.28"
reqwest = { version = "0.11", features = ["json","stream"] }
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
